Swagger documentacion delete
